# kafkaconsumer

./: .secrets.baseline  Cargo.toml  README.md
src/: lib.rs
